client certs work

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
           placeholder="localhost,tlscerts.dev"
         />
       </div>
+      <div>
+        <label for="client_common_name">Client common name:</label>
+        <input
+          type="text"
+          id="client_common_name"
+          name="client_common_name"
+          placeholder="George"
+        />
+      </div>
       <button type="button" onClick="run();">Generate</button>
     </form>
   </body>
