--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <meta charset="utf-8" />
     <title>TLSCerts.dev</title>
     <script src="wasm_exec.js"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism.min.css"
+      rel="stylesheet"
+    />
     <script>
       if (!WebAssembly.instantiateStreaming) {
         // polyfill
@@ -19,6 +23,39 @@
       // ).then(result => {
       //   go.run(result.instance);
       // });
+
+      window.onload = function() {
+        const languages = ["go", "python", "js", "ruby"];
+        const extensions = {
+          go: "go",
+          python: "py",
+          js: "js",
+          ruby: "rb"
+        };
+
+        const codeSamplesSection = document.getElementById("code_samples");
+
+        Promise.all(
+          languages.map(lang => {
+            return Promise.all([
+              fetch(`/examples/${lang}/client.${extensions[lang]}`),
+              fetch(`/examples/${lang}/server.${extensions[lang]}`)
+            ])
+              .then(([client, server]) =>
+                Promise.all([client.text(), server.text()])
+              )
+              .then(([client, server]) => {
+                const clientCode = document.createElement("code");
+                clientCode.className = `language-${lang}`;
+                clientCode.innerHTML = client;
+
+                const clientPre = document.createElement("pre");
+                clientPre.appendChild(clientCode);
+                codeSamplesSection.appendChild(clientPre);
+              });
+          })
+        ).then(Prism.highlightAll);
+      };
     </script>
     <link
       href="https://fonts.googleapis.com/css?family=Heebo&display=swap"
@@ -186,6 +223,12 @@
         <b>Code samples. </b>Here are some examples of doing mTLS in various
         languages.
       </p>
+      <div id="code_samples"></div>
     </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/components/prism-core.min.js"
+      data-manual
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/plugins/autoloader/prism-autoloader.min.js"></script>
   </body>
 </html>
