--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TLSCerts.dev</title>
+    <title>mtls.dev</title>
     <script src="wasm_exec.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism.min.css"
@@ -298,7 +298,7 @@
     <div class="panel">
       <div class="banner">
         <h1>
-          TLSCerts.dev
+          mtls.dev
         </h1>
         // Generating TLS certs doesn't have to be hard.
       </div>
@@ -344,7 +344,7 @@
               type="text"
               id="server_hosts"
               name="server_hosts"
-              placeholder="localhost,tlscerts.dev"
+              placeholder="localhost,mtls.dev"
             />
           </div>
           <div id="advanced">
@@ -400,7 +400,7 @@
                   type="text"
                   id="server_common_name"
                   name="server_common_name"
-                  placeholder="TLSCerts Co."
+                  placeholder="mtls.dev"
                 />
               </div>
               <div class="formfield">
