adding contributing section

--- a/index.html
+++ b/index.html
@@ -496,6 +496,17 @@
         </section>
         <div id="client_sample"></div>
       </div>
+      <section>
+        <h2>Contributing.</h2>
+        <p>
+          Want to add something? Find a bug? This project is open-source, please
+          send PRs to
+          <a href="https://github.com/jchorl/tlscerts" target="_blank"
+            >github.com/jchorl/tlscerts</a
+          >. Feel free to also get in touch at
+          <a href="mailto:info@mtls.dev">info@mtls.dev</a>.
+        </p>
+      </section>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/components/prism-core.min.js"
