adding noopener to links

--- a/index.html
+++ b/index.html
@@ -313,13 +313,17 @@
         <h2>The solution.</h2>
         <p>
           Cloudflare open-sourced their well-trusted Golang TLS library,
-          <a href="https://github.com/cloudflare/cfssl" target="_blank"
+          <a
+            href="https://github.com/cloudflare/cfssl"
+            target="_blank"
+            rel="noopener"
             ><code>cloudflare/cfssl</code></a
           >. It has sane defaults and is constantly updated with best practices.
           We've compiled it to
           <a
             href="https://github.com/golang/go/wiki/WebAssembly"
             target="_blank"
+            rel="noopener"
             >WebAssembly</a
           >
           to generate certs in your browser.
@@ -368,6 +372,7 @@
                       <a
                         href="https://support.dnsimple.com/articles/what-is-common-name/"
                         target="_blank"
+                        rel="noopener"
                         >here</a
                       >.
                     </div>
@@ -391,6 +396,7 @@
                       <a
                         href="https://support.dnsimple.com/articles/what-is-common-name/"
                         target="_blank"
+                        rel="noopener"
                         >here</a
                       >.
                     </div>
@@ -413,6 +419,7 @@
                       <a
                         href="https://golang.org/pkg/time/#ParseDuration"
                         target="_blank"
+                        rel="noopener"
                         >Go duration</a
                       >.
                     </div>
@@ -436,6 +443,7 @@
                       <a
                         href="https://support.dnsimple.com/articles/what-is-common-name/"
                         target="_blank"
+                        rel="noopener"
                         >here</a
                       >.
                     </div>
@@ -458,6 +466,7 @@
                       <a
                         href="https://golang.org/pkg/time/#ParseDuration"
                         target="_blank"
+                        rel="noopener"
                         >Go duration</a
                       >.
                     </div>
@@ -501,7 +510,10 @@
         <p>
           Want to add something? Find a bug? This project is open-source, please
           send PRs to
-          <a href="https://github.com/jchorl/tlscerts" target="_blank"
+          <a
+            href="https://github.com/jchorl/tlscerts"
+            target="_blank"
+            rel="noopener"
             >github.com/jchorl/tlscerts</a
           >. Feel free to also get in touch at
           <a href="mailto:info@mtls.dev">info@mtls.dev</a>.
