--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <meta charset="utf-8" />
     <title>mtls.dev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="/favicon.png" />
     <script src="wasm_exec.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism.min.css"
